<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="uk.jumpingmouse.wittertainment.MainActivity">

    <!-- Add Film -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/title_add_film"
        />

    <EditText
        android:id="@+id/txtFilmImdbId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:background="@android:color/white"
        android:hint="@string/hint_imdb_id"
        />

    <EditText
        android:id="@+id/txtFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords"
        android:background="@android:color/white"
        android:hint="@string/hint_film_title" />

    <Button
        android:id="@+id/btnSaveFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_save_film"/>

    <!-- List of Films -->

    <Button
        android:id="@+id/btnToggleFilmList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_toggle_film_list"/>

    <ListView
        android:id="@+id/viewFilmList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/list_item_film"/>


    <!-- Add Award -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/title_add_award"
        />

    <EditText
        android:id="@+id/txtAwardDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="date"
        android:background="@android:color/white"
        android:hint="@string/hint_award_date"
        />

    <EditText
        android:id="@+id/txtAwardCategoryId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapCharacters"
        android:background="@android:color/white"
        android:hint="@string/hint_category_id" />

    <!--
    <Spinner
        android:id="@+id/listAwardCategoryId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:value=" "
        />
    -->

    <EditText
        android:id="@+id/txtAwardFilmId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapCharacters"
        android:background="@android:color/white"
        android:hint="@string/hint_film_id" />

    <EditText
        android:id="@+id/txtAwardCriticId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapCharacters"
        android:background="@android:color/white"
        android:hint="@string/hint_critic_id" />

    <EditText
        android:id="@+id/txtAwardCriticQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapSentences"
        android:background="@android:color/white"
        android:hint="@string/hint_critic_quote" />

    <Button
        android:id="@+id/btnSaveAward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_save_award"/>

    <!-- List of Awards -->

    <Button
        android:id="@+id/btnToggleAwardList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_toggle_award_list"/>

    <ListView
        android:id="@+id/viewAwardList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/list_item_award"/>

    <!-- Add Critic -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/title_add_critic"
        />

    <EditText
        android:id="@+id/txtCriticId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapCharacters"
        android:background="@android:color/white"
        android:hint="@string/hint_critic_id"
        />

    <EditText
        android:id="@+id/txtCriticName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords"
        android:background="@android:color/white"
        android:hint="@string/hint_critic_name" />

    <EditText
        android:id="@+id/txtCriticDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapSentences"
        android:background="@android:color/white"
        android:hint="@string/hint_critic_description"
        />

    <Button
        android:id="@+id/btnSaveCritic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_save_critic"/>

    <!-- List of Critics -->

    <Button
        android:id="@+id/btnToggleCriticList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_label_toggle_critic_list"/>

    <ListView
        android:id="@+id/viewCriticList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/list_item_critic"/>



</LinearLayout>
